Fix nav and contact bar align
-Fix the nav bar and contact bar text align
- Move the nav bar below h1 and make sticky
- Commented the function of different items
- Made all links open in new tab
- Updated College table info

--- a/index.css
+++ b/index.css
@@ -118,8 +118,8 @@ a#contact{
   text-decoration: none;
   font-family: "Poppins", sans-serif;
   color: black;
-  text-align:center;
-
+  margin-inline-start: 18vw;
+  margin-inline-end: 18vw;
 }
 
 a#contact:hover{
@@ -165,7 +165,7 @@ td{
   font-family: "Poppins", sans-serif;
   color: black;
   margin-inline-start: 18vw;
-  margin-right: 25vw;
+  margin-inline-end: 18vw;
 }
 
 a#navtext:hover{
